refactor(backend): 现代化后端代码并收敛认证与菜单查询逻辑
Java 25 switch 表达式改写 DataScopeHelper；将 SysUserMapper 内联 SQL 抽到 SysUserMapper.xml 并使用 @DataScope 默认字段；认证/菜单查询收敛到 AuthQueryService，复用 SysMenuServiceImpl.getMenuTreeDTO 去除重复；整理各 ServiceImpl、UserDetailsServiceImpl、安全配置与 MyBatis-Plus 配置，清理无用导入。